@@ -10,11 +10,15 @@ class JSONRPCRequestHandler(RequestHandler):
             application, request, **kwargs)
         self.dispatcher = dispatcher
 
-    def post(self):
-        response = self.dispatcher.dispatch(self.request.body)
+    def _on_result(self, res):
         self.set_header('Content-Type', 'application/json')
-        self.write(response)
+        self.write(res)
         self.finish()
+
+    @asynchronous
+    def post(self):
+        res = self.dispatcher.dispatch(self.request.body, cb=self._on_result)
+
 
 
 
